--- a/README.textile
+++ b/README.textile
@@ -330,13 +330,13 @@ For webhooks to work, you must visit your Stripe dashboard at "https://manage.st
 
 h3. Change your Application's Secret Token
 
-Because the your application's secret token is currently public in this sample application, it is crucial that you change it before deploying your application in production mode. Otherwise, people could change their session information, and potentially access your SaaS or membership site as a premium user or administrator! Edit your *config/initializers/secret_token.rb* file:
+If you've cloned the application from GitHub, it is crucial that you change the application's secret token before deploying your application in production mode. Otherwise, people could change their session information, and potentially access your SaaS or membership site as a premium user or administrator! Ideally, your secret token should be at least 30 characters long and completely random. Edit your *config/initializers/secret_token.rb* file:
 
 <pre>
 RailsStripeMembershipSaas::Application.config.secret_token = '...some really long, random string...'
 </pre>
 
-Ideally, your secret token should be at least 30 characters long and completely random.
+If you've used the Rails Composer tool to generate the application, the application's secret token will already be unique, just as with any Rails application generated with the @rails new@ command.
 
 h2. Test the App
 
