--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -1,7 +1,8 @@
 h1. CHANGELOG
 
-h2. 1.0.1 October 26, 2012
+h2. 1.0.1 October 27, 2012
 
+* fix issue #8 (mass assignment error when changing plans)
 * require a new user to choose a subscription plan (contributed by Taylor Mock)
 * add mailer specs (contributed by Taylor Mock)
 * fix rspec test for content controller (contributed by Jordan Andree)
