--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -1,13 +1,14 @@
 h1. CHANGELOG
 
-h2. 1.0.2 November 8, 2012
+h2. 1.0.2 November 9, 2012
 
-* fix issue #13 (removing a user subscription plan won't alter the Role database)
-* fix issue #12 (example.com email addresses can be used in development and test but not production)
+* fix issue #14: make sure plan parameter persists after failed registration (contributed by Matt Witek)
+* fix issue #13: removing a user subscription plan won't alter the Role database (contributed by Taylor Mock)
+* fix issue #12: example.com email addresses can be used in development and test but not production (contributed by Matt Witek)
 
 h2. 1.0.1 October 27, 2012
 
-* fix issue #8 (mass assignment error when changing plans)
+* fix issue #8: mass assignment error when changing plans
 * require a new user to choose a subscription plan (contributed by Taylor Mock)
 * add mailer specs (contributed by Taylor Mock)
 * fix rspec test for content controller (contributed by Jordan Andree)
