--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h2. 1.0.4 November 13, 2012
+
+* display month numbers for credit card expiry on new and edit registration forms (contributed by Aaron Breckenridge)
+
 h2. 1.0.3 November 11, 2012
 
 * fix issue #15: ddded the stripe error response div to the account/edit page (contributed by Matt Witek)
