refactor 5c949d2a6fdd9e3d1598f0619bcc610bd3013830 (improve Registrations controller)

--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -1,7 +1,9 @@
 h1. CHANGELOG
 
-h2. 1.0.5 November 29, 2012
+h2. 1.0.5 December 2, 2012
 
+* fix issue #17: handle 'card declined' errors
+* add tests for Stripe authorization (contributed by Taylor Mock)
 * improve Registrations controller so current password is not required to change plan or credit card
 * fix issue #25: Capybara needs disambiguation
 
